Fix hamburger menu not showing menu on click

--- a/src/Navbar/MenuIcon.css
+++ b/src/Navbar/MenuIcon.css
@@ -29,7 +29,8 @@
   top: 5.5vh; 
   left: 5.5vw; 
   background-image: radial-gradient(green, black);
-  z-index: 1000;
+  z-index: -1;
+  opacity: 0.7;
 
   transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
 }
@@ -39,7 +40,7 @@
   position: fixed;
   top: 0;
   left: -60vw;
-  z-index: 1500;
+  z-index: -1;
   opacity: 0;
   width: 0;
   transition: all 0.8s;
